# xawtv4

./: .cvsignore  Changes  Makefile.in  NEW_IN_4  README  README.dvb  README.translate  README.xfree4  autogen.sh  config.h.in  configure.ac
common/: Subdir.mk  capture.c  capture.h  commands.c  commands.h  devs.c  devs.h  dvb-epg.c  dvb-epg.h  dvb-lang.c  dvb-monitor.c  dvb-monitor.h  dvb-tuning.c  dvb-tuning.h  dvb.c  dvb.h  event.c  fifo.c  fifo.h  frequencies.c  frequencies.h  parseconfig.c  parseconfig.h  tuning.c  tuning.h  tv-config.c  tv-config.h  vbi-data.c  vbi-data.h  vbi-dvb.c  vbi-dvb.h
console/: .cvsignore  Subdir.mk  fbtools.c  fbtv.c  ftp.c  radio.c  record.c  scantv.c  showqt.c  showriff.c  streamer.c  ttv.c  v4l-conf.c  v4l-info.c  vbi-tty.c  vbi-tty.h  webcam.c
debug/: .cvsignore  Subdir.mk  alsamixer.c  dvb-all  dvb-signal.c  epg.c  malloc.c  probe.c  sysfs.c  vbi-rec.c  xvideo.c
desktop/: alexplore.desktop  dvbradio.desktop  dvbrowse.desktop  motv.desktop  mtt.desktop  pia.desktop  scantv.desktop  xawtv.desktop
frequencies/: Index.map  Subdir.mk  multikabel.list
gtk/: .cvsignore  Subdir.mk  alexplore.c  av-sync.c  av-sync.h  blit.c  blit.h  dvbradio.c  dvbrowse.c  epg-store.c  epg-store.h  gui-analog.c  gui-control.c  gui-dvbscan.c  gui-dvbtune.c  gui-epg.c  gui-misc.c  gui-teletext.c  gui.h  logo.xpm  mtt.c  pia.c  xawtv.c  xscreensaver.c  xscreensaver.h
jwz/: vroot.h
libng/: Subdir.mk  color_lut.c  color_packed.c  color_yuv2rgb.c  convert.c  devices.c  devices.h  grab-ng.c  grab-ng.h  misc.c  parse-dvb.c  parse-mpeg.c  parse-mpeg.h  writefile.c
libng/contrib-plugins/: bilinear.c  cubic.c  flt-smooth.c  linear-blend.c  linedoubler.c  x
libng/plugins/: Subdir.mk  conv-mjpeg.c  conv-mpeg.c  deinterlace.c  drv0-bsd.c  drv0-v4l2.c  drv1-v4l.c  flt-invert.c  read-mpeg.c  read-qt.c  snd0-arts.c  snd1-alsa.c  snd1-oss.c  write-avi.c  write-mpeg.c  write-qt.c
man/: motv.1  pia.1  streamer.1  v4l-conf.8  webcam.1  xawtv-remote.1  xawtv.1
man/fr/: alevtd.1  fbtv.1  record.1  rootv.1  scantv.1  streamer.1  subtitles.1  ttv.1  xawtv-remote.1  xawtv.1
po/: .cvsignore  ar.po  cs.po  de.po  pl.po  ru.po  xawtv.pot
scripts/: build-test
structs/: struct-dump.c  struct-dvb.c  struct-dvb.h  struct-v4l2.c
vbistuff/: .cvsignore  Subdir.mk  alevtd.c  ntsc-cc.c  page.c  response.c  top.html.in
x11/: .cvsignore  MoTV-de  MoTV-default  MoTV-fixed  MoTV-fr  MoTV-it  MoTV4.ad  Subdir.mk  Xawtv4.ad  atoms.c  atoms.h  av-sync.c  av-sync.h  blit.c  blit.h  conf.c  icons.c  leak.sh  log  man.c  motif-gettext.c  motif-gettext.h  motv.c  mplayer.sh  mtt.c  mtt4.ad  pia.c  propwatch.c  rootv.c  rootv.xml  scan.sh  strace  v4lctl.c  vbi-gui.c  vbi-gui.h  vbi-x11.c  vbi-x11.h  x11.c  x11.h  xawtv-remote.c  (+6 more)
x11/xpm/: home.xpm  movie.xpm  mute.xpm  prev.xpm  snap.xpm
